testsuite/tests/linear/should_fail/LinearVar.hs
{-# LANGUAGE LinearTypes #-}
module LinearVar where

f :: a %m -> b
f = undefined :: a -> b
