testsuite/tests/linear/should_fail/LinearVar.stderr

LinearVar.hs:5:5: error:
    • Couldn't match type ‘m’ with ‘'Many’
      ‘m’ is a rigid type variable bound by
        the type signature for:
          f :: forall a b. a -> b
        at LinearVar.hs:4:1-16
      Expected type: a # m -> b
        Actual type: a -> b
    • In the expression: undefined :: a -> b
      In an equation for ‘f’: f = undefined :: a -> b
    • Relevant bindings include
        f :: a # m -> b (bound at LinearVar.hs:5:1)
